# ec

./: .gitignore  README.md  funciones.py  main.py  pyproject.toml  test_kernel.ipynb
bdd/: create_database.py  db_functions.py  funciones_db.py  schema.sql  ventas.db
bdd/comprobantes/: afip_mis_comprobantes_ventas.py  mc_afip_ventas_xlsx.py
bdd/datos/: README.MD  importar_datos.py
deducciones/: misiones.py
funciones/: afip.py  formatear.py  navegar.py
impuestos/: monotributo_simple.py
