[project]
name = "ec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter-core>=5.8.1",
    "jupyter>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "selenium>=4.35.0",
]
